# discovery1

./: .gitignore  CMakeLists.txt  README.md
.claude/: CLAUDE.md
docs/: interior-objects.md
maps/: test_corridor.json
src/: hal.cpp  main.cpp  ship.cpp
src/core/: game.hpp  math.hpp  object.hpp  player.hpp  texture_gen.hpp  world.hpp  world_loader.cpp  world_loader.hpp
src/platform/: input.cpp  input.hpp  renderer.cpp  renderer.hpp
tests/: test_math.cpp  test_objects.cpp  test_player.cpp  test_texture_gen.cpp  test_world.cpp  test_world_loader.cpp
